# parsing-by-example

./: .gitignore  Makefile  README.md  hie.yaml  parsing-by-example.cabal
.github/workflows/: ci.yaml
app/: Main.hs
app/JSON/: Main.hs
examples/: oneline.json  random.json
src/: JSON.hs  Pretty.hs  TOML.hs
src/JSON/: Class.hs  Gen.hs  Lexer.hs  Parser.hs  Parsing.hs  Pretty.hs  Type.hs
src/TOML/: Class.hs  Lexer.hs  Parser.hs
tasty/: Main.hs
tasty/Test/: JSON.hs  TOML.hs
tasty/Test/TOML/: Array.hs  Bool.hs  Common.hs  Date.hs  Float.hs  Integer.hs  Key.hs  String.hs  Toml.hs
test/: Spec.hs
