cabal-version:       3.0
name:                parsing-by-example
version:             0.1.0.0
synopsis:            Fill the synopsis
description:         Fill the description
homepage:            https://github.com/monadplus/parsing-by-example
bug-reports:         https://github.com/monadplus/parsing-by-example/issues
license:             MIT
license-file:        LICENSE
author:              Arnau Abella
maintainer:          Arnau Abella <arnauabella@gmail.com>
copyright:           2021-2022 Arnau Abella
category:            Experimental
build-type:          Simple
extra-doc-files:     README.md
extra-source-files:
                     CHANGELOG.md
tested-with:         GHC == 9.2.1

source-repository head
  type:                git
  location:            https://github.com/monadplus/parsing-by-example.git

Common common-options
  default-language:    Haskell2010
  build-depends:       base >=4.16 && <4.17
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags

Executable parsing-by-example
  import:                common-options
  main-is:               Main.hs
  hs-source-dirs:        app

  build-depends:         parsing-by-example,

  ghc-options:           -O2
                         -threaded
                         -rtsopts
                         -with-rtsopts=-N

Library
  import:             common-options
  hs-source-dirs:     src

  exposed-modules:     JSON
                     , JSON.Class
                     , JSON.Gen
                     , JSON.Lexer
                     , JSON.Parsing

  build-depends:      bytestring ^>=0.11,
                      containers ^>=0.6,
                      Earley ^>= 0.13,
                      hedgehog ^>= 1.1,
                      lens ^>= 5.1,
                      megaparsec ^>= 9.2,
                      mtl ^>= 2.2,
                      parser-combinators ^>= 1.3,
                      scientific ^>= 0.3,
                      template-haskell ^>= 2.18,
                      text ^>=1.2,
                      unordered-containers ^>= 0.2,

Test-suite tasty
  import:               common-options
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       tasty

  other-modules:

  build-depends:        parsing-by-example,
                        tasty ^>=1.4,
                        tasty-hunit ^>= 0.10,
                        tasty-hedgehog ^>= 1.2,
                        tasty-smallcheck ^>= 0.8,

Test-suite doctest
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      doctest
  main-is:             Main.hs
  build-depends:       doctest  >=0.17 && <0.21
